filebrowser/filebrowser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/component: file-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: filebrowser
      app.kubernetes.io/component: file-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filebrowser
        app.kubernetes.io/component: file-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.38.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /database.db
              subPath: database.db
              name: config
            - mountPath: /srv
              name: data
            - mountPath: /srv/Kubernetes
              name: kubernetes
            - mountPath: /srv/Media
              name: media
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/filebrowser
            server: 192.168.86.107
        - name: data
          nfs:
            path: /export/Data
            server: 192.168.86.107
        - name: kubernetes
          nfs:
            path: /export/Kubernetes
            server: 192.168.86.107
        - name: media
          nfs:
            path: /export/Media
            server: 192.168.86.107
