filebrowser/filebrowser-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.albinmedoc.se`)
      kind: Rule
      services:
        - name: filebrowser
          port: 80
      middlewares:
        - name: authentik
          namespace: authentik
